fix alignment [wip]

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 h1 {
